Fixed Welcome Back and ScoresUI elements alignment.

--- a/style.css
+++ b/style.css
@@ -264,10 +264,10 @@ body {
 }
 
 .start {
-    width: 12vmin;
+    width: min-content;
     height: 7vmin;
     margin: 0.5vmin;
-    padding: 2vmin 0;
+    padding: 0 3vmin;
     border-radius: 1vmin;
     scale: 1;
     transition: all 0.3s ease-in-out;
@@ -275,6 +275,7 @@ body {
     cursor: pointer;
     background-color: hsl(var(--hue), 50%, 30%);
     color: hsl(var(--hue), 80%, 90%);
+    line-height: 1.5em;
 }
 
 .start.started {
@@ -416,30 +417,37 @@ body {
 }
 
 .subtitle {
-    color: hsla(var(--hue), 80%, 100%, 0.6);
+    --hue: 140;
+    color: hsla(var(--hue), 100%, 75%, 0.8);
     font-size: 1vmin;
     margin-right: -15%;
     text-align: end;
 }
 
-.highscore-ui {
-    font-size: 7.5vmin;
+.scores-ui-cont {
+    display: grid;
+    align-items: center;
     justify-content: center;
-    gap: 6%;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
     user-select: none;
 }
 
 .score-ui {
-    width: 24%;
-    text-align: center;
+    /* text-align: center; */
+    font-size: 6vmin;
+    margin: 2vmin 0;
+    color: hsl(var(--hue), 50%, 80%);
 }
 
 .score-title {
-    font-size: 1.5vmin;
     text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 1vmin;
 }
+
+.score-item {
+    text-align: center;
+}
+
 
 .error {
     --hue: 0;
@@ -453,18 +461,16 @@ body {
     color: hsl(var(--hue), 50%, 50%);
     text-transform: uppercase;
     display: none;
-    line-height: 1.5em;
+    user-select: none;
 }
 
 .welcome span {
-    margin: 2vmin 0vmin;
-    /* padding: 1vmin 2vmin; */
-    font-size: 2.5vmin;
+    line-height: 2em;
+    font-size: 3vmin;
     color: hsl(var(--hue), 50%, 80%);
 }
 
 .welcome > .back {
-    margin-top: 1vmin;
     text-align: end;
     font-size: 1em;
 }
@@ -476,5 +482,4 @@ body {
 .game-over-text + p {
     font-size: 2vmin;
     text-align: right;
-    margin-top: 1vmin;
 }
